// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> renders 1`] = `
App {
  "_reactInternalInstance": ShallowComponentWrapper {
    "_calledComponentWillUnmount": false,
    "_compositeType": 0,
    "_context": Object {},
    "_currentElement": <App />,
    "_debugID": 1,
    "_hostContainerInfo": null,
    "_hostParent": null,
    "_instance": [Circular],
    "_mountOrder": 1,
    "_pendingCallbacks": null,
    "_pendingElement": null,
    "_pendingForceUpdate": false,
    "_pendingReplaceState": false,
    "_pendingStateQueue": null,
    "_renderedComponent": NoopInternalComponent {
      "_currentElement": <div
        className="App container"
>
        <h2>
                Welcome to Super Emoji Routlette
        </h2>
        <withBackend(Component)
                handleSubmit={[Function]}
        />
</div>,
      "_debugID": 2,
      "_renderedOutput": <div
        className="App container"
>
        <h2>
                Welcome to Super Emoji Routlette
        </h2>
        <withBackend(Component)
                handleSubmit={[Function]}
        />
</div>,
    },
    "_renderedNodeType": 0,
    "_rootNodeID": 0,
    "_topLevelWrapper": null,
    "_updateBatchNumber": null,
    "_warnedAboutRefsInRender": false,
  },
  "context": Object {},
  "props": Object {},
  "refs": Object {},
  "setRegistrationStatus": [Function],
  "state": Object {
    "isRegistered": false,
  },
  "updater": Object {
    "enqueueCallback": [Function],
    "enqueueCallbackInternal": [Function],
    "enqueueElementInternal": [Function],
    "enqueueForceUpdate": [Function],
    "enqueueReplaceState": [Function],
    "enqueueSetState": [Function],
    "isMounted": [Function],
    "validateCallback": [Function],
  },
}
`;

exports[`<App /> renders roulette component when isRegistered 1`] = `
App {
  "_reactInternalInstance": ShallowComponentWrapper {
    "_calledComponentWillUnmount": false,
    "_compositeType": 0,
    "_context": Object {},
    "_currentElement": <App />,
    "_debugID": 3,
    "_hostContainerInfo": null,
    "_hostParent": null,
    "_instance": [Circular],
    "_mountOrder": 2,
    "_pendingCallbacks": null,
    "_pendingElement": null,
    "_pendingForceUpdate": false,
    "_pendingReplaceState": false,
    "_pendingStateQueue": null,
    "_renderedComponent": NoopInternalComponent {
      "_currentElement": <div
        className="App container"
>
        <h2>
                Welcome to Super Emoji Routlette
        </h2>
        <Roulette />
</div>,
      "_debugID": 4,
      "_renderedOutput": <div
        className="App container"
>
        <h2>
                Welcome to Super Emoji Routlette
        </h2>
        <Roulette />
</div>,
    },
    "_renderedNodeType": 0,
    "_rootNodeID": 0,
    "_topLevelWrapper": null,
    "_updateBatchNumber": null,
    "_warnedAboutRefsInRender": false,
  },
  "context": Object {},
  "props": Object {},
  "refs": Object {},
  "setRegistrationStatus": [Function],
  "state": Object {
    "isRegistered": true,
  },
  "updater": Object {
    "enqueueCallback": [Function],
    "enqueueCallbackInternal": [Function],
    "enqueueElementInternal": [Function],
    "enqueueForceUpdate": [Function],
    "enqueueReplaceState": [Function],
    "enqueueSetState": [Function],
    "isMounted": [Function],
    "validateCallback": [Function],
  },
}
`;
